[project]
name = "kagiapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hanchin Hsieh", email = "me@yuchanns.xyz"},
]
dependencies = ["playwright>=1.53.0", "fastapi>=0.116.1", "pydantic>=2.11.7", "uvicorn>=0.35.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Apache"}

[tool.pdm.scripts]
dev = "python app.py --reload"
lint = "ruff check --fix ."
format = "ruff format ."

[tool.pdm]
distribution = false

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
